[package]
name = "raft-kvs"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = "0.20.0"
futures = "0.3.4"
tokio = "0.2.13"
rand = "0.7.3"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
priority-queue = "0.7.0"

[dev-dependencies]
lazy_static = "1.4.0"
slog-scope = "4.3.0"

[[test]]
name = "raft_test"
